<resources>
    <string name="app_name">RCL-App</string>

    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="registrationTitle">Registration</string>
    <string name="loginTitle">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="r_password">Repeat Password</string>

    <string name="rewards">Your Rewards</string>
    <string name="yourTotalPointsAre">Total Points</string>
    <string name="progressTillNextReward">Progress Till Next Reward</string>
    <string name="requests">REQUESTS</string>

    <string name="quantity">Quantity</string>
    <string name="amountHint">Amount</string>

    <string name="type">Type</string>

    <string name="listTxtTitle">List</string>
    <string name="openRequests">Open Requests</string>
    <string name="updateItemPoints">Update item points</string>
    <string name="update">Update</string>
    //Buttons
    <string name="gotorcl">RECYCLE</string>
    <string name="addBtnTxt">ADD</string>
    <string name="recycleBtnTxt">SUBMIT</string>

    <string name="credits">Hadjiantonis - Moschou</string>
    <string name="statistics">STATISTICS</string>
    <string name="approve">APPROVE</string>
    <string name="decline">DECLINE</string>

    <string name="ipv4">192.168.1.228</string>
    <string name="top3">Top 3 Recyclers</string>
    <string name="points">Points</string>
</resources>