<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recycling_image"
    tools:context="com.example.rcl_app.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/rcl_logo_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/white_transparent"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/registrationTitle"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/username"
                android:textSize="18sp" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners_background"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners_background"
                android:inputType="textPassword"
                android:paddingLeft="10dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"

                android:text="@string/r_password"
                android:textSize="18sp" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners_background"
                android:inputType="textPassword"
                android:paddingLeft="10dp" />


            <Button
                android:id="@+id/registerButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/green"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:background="@color/grey_transparent"
        android:gravity="center"
        android:text="@string/credits"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>