<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recycling_image">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:src="@drawable/rcl_logo_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023">

    </ImageView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="338dp"
        android:layout_height="568dp"
        android:backgroundTint="@color/white_transparent"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:text="@string/rewards"
            android:textSize="30sp"
            android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:layout_width="210dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginStart="45dp"
                        android:layout_gravity="right"
                        android:background="@drawable/rounded_corners_background">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/amountHint"
                            android:inputType="number"
                            android:backgroundTint="@color/grey"
                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp">

                            <ImageButton
                                android:id="@+id/arrowUpBtn"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                app:srcCompat="@drawable/arrow_up" />

                            <ImageButton
                                android:id="@+id/arrowDownBtn"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                app:srcCompat="@drawable/arrow_down" />

                        </LinearLayout>


                    </LinearLayout>



                </LinearLayout>


            </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/addBtn"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:text="@string/addBtnTxt" />

        <androidx.cardview.widget.CardView
            android:layout_width="249dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="390dp"
            android:backgroundTint="@color/grey_transparent"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"

                android:text="@string/listTxtTitle"
                android:textColor="@color/black"
                android:textSize="20dp" />

        </androidx.cardview.widget.CardView>



    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/recycleBtn"
        android:layout_width="239dp"
        android:layout_height="45dp"
        android:text="@string/recycleBtnTxt"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.555" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="53dp"
        android:layout_height="43dp"
        android:layout_marginStart="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recycleBtn"
        app:srcCompat="@drawable/back_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>