<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recycling_image">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:src="@drawable/rcl_logo_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023">

    </ImageView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="323dp"
        android:layout_height="447dp"
        android:backgroundTint="@color/white_transparent"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ultra"
            android:text="@string/rewards"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="249dp"
            android:layout_height="319dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/green_transparent"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalPoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gorditas"
                    android:gravity="center_horizontal"
                    android:text="@string/yourTotalPointsAre"
                    android:textColor="@color/white"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/totalPointsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/fredericka_the_great"
                    android:text="1500"
                    android:textColor="@color/white"
                    android:textSize="80dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progressTillNextReward"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18dp"
                    android:fontFamily="@font/gorditas"
                    android:layout_marginTop="15dp"/>

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:id="@+id/progressBar"
                    app:indicatorColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/rclButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/gorditas"
        android:text="@string/gotorcl"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>