<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recycling_image">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:src="@drawable/rcl_logo_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023">

    </ImageView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="342dp"
        android:layout_height="600dp"
        android:backgroundTint="@color/white_transparent"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:text="Recycle"
            android:fontFamily="@font/ultra"
            android:textSize="30sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/white_transparent"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/quantity"
                    android:fontFamily="@font/gorditas"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginStart="35dp"
                    android:background="@drawable/rounded_corners_background"
                    android:orientation="horizontal">


                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/grey"
                        android:fontFamily="@font/gorditas"
                        android:text="0"
                        android:inputType="number"
                        android:id="@+id/amountInput"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/arrowUpButton"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/arrow_up" />

                        <ImageButton
                            android:id="@+id/arrowDownButton"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/arrow_down" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/white_transparent"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/type"
                    android:fontFamily="@font/gorditas"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginStart="45dp"
                    android:background="@drawable/rounded_corners_background"
                    android:orientation="horizontal">


                    <Spinner
                        android:id="@+id/recycleTypesSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"></Spinner>


                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/addToListButton"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:text="@string/addBtnTxt"
            android:textSize="20dp"
            android:fontFamily="@font/freckle_face"/>

        <androidx.cardview.widget.CardView
            android:layout_width="249dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="370dp"
            android:backgroundTint="@color/grey_transparent"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/gorditas"
                android:text="@string/listTxtTitle"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/requestItemsListView"
                android:layout_marginTop="40dp"
                android:background="@color/grey_transparent">

                
            </ListView>

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/backToRewardsButton"
            android:layout_width="53dp"
            android:layout_height="43dp"
            android:src="@drawable/back_btn" />

        <Space
            android:layout_width="32dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/recycleButton"
            android:layout_width="290dp"
            android:layout_height="44dp"
            android:backgroundTint="@color/green"
            android:text="@string/recycleBtnTxt"
            android:textSize="20dp"
            android:fontFamily="@font/freckle_face"/>

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>